--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <h1>Hello World</h1>
+            <h1>Hello from service</h1>
         </div>
         <div class="row">
         </div>
