--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Title</title>
+    <title>Categories</title>
 
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.1.0/css/bootstrap.min.css}">
 
@@ -135,7 +135,7 @@
                         });
                         dlg.modal('show');
                     };
-                    
+
                     self.btnNew = function () {
                         dlgModal = document.getElementById("categoryEdit");
 
