--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -84,21 +84,21 @@
                     <th scope="col" class="ion-image"></th>
                     <th scope="col">Name</th>
                     <th scope="col" class="d-none d-md-block">Description</th>
-                    <th scope="col" class="ion-social-usd"></th>
                     <th scope="col" class="ion-cash"></th>
                     <th scope="col" class="ion-bag "></th>
-                    <th scope="col"></th>
+                    <th scope="col" class="ion-compose"></th>
                 </tr>
                 </thead>
                 <tbody data-bind="foreach: flows" class="text-center">
                 <tr>
-                    <td scope="row"><img src="#" alt="image" width="32" height="32"
-                                         data-bind="attr: { src: category.urlImage }"></td>
+                    <td scope="row"><img src="#" alt="image" width="32" data-bind="attr: { src: category.urlImage }"></td>
                     <td data-bind="text: category.name" class="text-left">Shop</td>
                     <td data-bind="text: description" class="d-none d-md-block text-left">Weekly shopping</td>
-                    <td data-bind="text: category.currency.name">VND</td>
                     <td data-bind="attr: { class: category.operation == 1 ? 'ion-plus-circled' : 'ion-minus-circled' }"></td>
-                    <td data-bind="text: amount" class="text-right"></td>
+                    <td>
+                        <span data-bind="text: category.currency.name" class="left"></span>:
+                        <span data-bind="text: amount" class="text-right"></span>
+                    </td>
                     <td class="text-center">
                         <div class="btn-group">
                             <button type="button" class="btn btn-secondary dropdown-toggle ion-more" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
