--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -53,6 +53,14 @@
 <body>
 <script type='text/javascript' src='/webjars/knockout/3.4.2/dist/knockout.js'></script>
 
+<script type='text/javascript' th:inline="javascript">
+    /*<![CDATA[*/
+    var config = /*[[${config}]]*/ [];
+    console.log(config);
+
+    /*]]>*/
+</script>
+
 
 <div class="container">
     <div class="row">
@@ -97,10 +105,10 @@
                     <td data-bind="attr: { class: category.operation == 1 ? 'ion-plus-circled' : 'ion-minus-circled' }"></td>
                     <td>
                         <span data-bind="text: category.currency.name" class="left"></span>:
-                        <!-- ko if: category.currency.name == 'VND' -->
+                        <!-- ko if: category.currency.name == config.defaultCurrency -->
                         <span data-bind="text: amount" class="text-right"></span>
                         <!-- /ko -->
-                        <!-- ko if: category.currency.name != 'VND' -->
+                        <!-- ko if: category.currency.name != config.defaultCurrency -->
                         <span data-bind="text: amountOrigin" class="text-right"></span>
                         <!-- /ko -->
                     </td>
