--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -126,6 +126,30 @@
             </table>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-10 offset-1 text-center">
+        <!-- pageable -->
+            <nav aria-label="flow navigation">
+                <ul class="pagination pagination-sm justify-content-end">
+                    <li class="page-item" data-bind="css: { disabled: first }, click: btnFirstPage">
+                        <a class="page-link" href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                    <!-- ko foreach: pages -->
+                    <li class="page-item" data-bind="css: { active: page == $index() }"><a class="page-link" href="#" data-bind="text: $index()+1, click: function(){ btnPage($index()); }"></a></li>
+                    <!-- /ko -->
+                    <li class="page-item" data-bind="css: { disabled : last }, click: btnLastPage">
+                        <a class="page-link" href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </div>
 
 
@@ -137,8 +161,13 @@
         self.amount = ko.observable();
         self.amountOrigin = ko.observable();
         self.categories = ko.observableArray();
-        self.page = 0;
+        self.page = ko.observable(0);
         self.size = 10;
+        self.pageable = ko.observableArray();
+        self.first = ko.observable(false);
+        self.last = ko.observable(false);
+        self.totalPages = ko.observable(5);
+        self.pages = ko.observableArray();
 
         self.btnEditFlow = function(flow) {
             console.table(flow);
@@ -148,6 +177,9 @@
                 url: '/rest/cash_flow/' + flow.id, type: "DELETE",
                 success: function () {
                     self.flows.remove(flow);
+                    if (false === self.first() && false === self.last()) {
+                        self.getPage(self.page);
+                    }
                 }
             });
         };
@@ -171,26 +203,50 @@
                     data: JSON.stringify(flow),
                     contentType: "application/json; charset=utf-8",
                     success: function (updated) {
-                        self.flows.unshift(updated);
-                        console.log(self.flows().length + " " + self.size);
-                        if (self.flows().length > self.size) {
-                            self.flows.pop();
+                        if (false === self.first() && false === self.last()) {
+                            self.getPage(self.page);
+                        } else {
+                            self.flows.unshift(updated);
+                            if (self.flows().length > self.size) {
+                                self.flows.pop();
+                            }
+                            self.amount('');
                         }
-                        self.amount('');
                     }
                 }
             );
 
-        }
+        };
 
-    });
+        self.btnFirstPage = function() {
+            self.getPage(0);
+        };
 
-    self.update = function(data) {
-        self.flows(data.content);
-    };
+        self.btnLastPage = function() {
+            self.getPage(self.totalPages() - 1);
+        };
 
-    $.get("/rest/cash_flow?page=" +self.page+"&size="+self.size, function (data) {
-        self.update(data);
+        self.btnPage = function (page) {
+            self.getPage(page);
+        };
+
+        self.getPage = function(page) {
+            $.get("/rest/cash_flow?page="+page+"&size="+self.size, function (data) {
+                self.update(data);
+            });
+        };
+
+        self.update = function(data) {
+            self.flows(data.content);
+            self.pageable(data.pageable);
+            self.first(data.first);
+            self.last(data.last);
+            self.totalPages(data.totalPages);
+            self.pages(new Array(data.totalPages));
+            self.page = data.number;
+        };
+
+        self.getPage(0);
     });
 
     $.get("/rest/category", function (data) {
