--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,11 @@
     <script src="/webjars/popper.js/1.14.1/umd/popper.min.js"></script>
 
     <script th:src="@{/webjars/bootstrap/4.1.0/js/bootstrap.min.js}"></script>
+
+    <script src="https://code.highcharts.com/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+
     <style>
         .block {
             display: flex;
@@ -256,6 +261,53 @@
         self.categories(data);
     });
 
+</script>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div id="pieChart"></div>
+        </div>
+    </div>
+
+<script type="text/javascript">
+    // Build the chart
+    $.get("/rest/cash_flow/report/pie", function (data) {
+        var pieData = [];
+
+        data.forEach(function (item) {
+            pieData.push({ name: item[1], y: item[2] })
+        });
+
+        Highcharts.chart('pieChart', {
+            chart: {
+                plotBackgroundColor: null,
+                plotBorderWidth: null,
+                plotShadow: false,
+                type: 'pie'
+            },
+            title: {
+                text: 'Money flow'
+            },
+            tooltip: {
+                pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+            },
+            plotOptions: {
+                pie: {
+                    allowPointSelect: true,
+                    cursor: 'pointer',
+                    dataLabels: {
+                        enabled: false
+                    },
+                    showInLegend: true
+                }
+            },
+            series: [{
+                name: 'Categories',
+                colorByPoint: true,
+                data: pieData
+            }]
+        });
+    });
 </script>
 
 </body>
