--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,9 +16,9 @@
 
     <script th:src="@{/webjars/bootstrap/4.1.0/js/bootstrap.min.js}"></script>
 
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
-    <script src="https://code.highcharts.com/modules/export-data.js"></script>
+    <script src="/webjars/highcharts/6.1.0/highcharts.js"></script>
+    <script src="/webjars/highcharts/6.1.0/modules/exporting.js"></script>
+    <script src="/webjars/highcharts/6.1.0/modules/export-data.js"></script>
 
     <style>
         .block {
@@ -274,8 +274,10 @@
     $.get("/rest/cash_flow/report/pie", function (data) {
         var pieData = [];
 
+        var total = 0;
         data.forEach(function (item) {
             pieData.push({ name: item[1], y: item[2] })
+            total += item[2];
         });
 
         Highcharts.chart('pieChart', {
@@ -286,10 +288,10 @@
                 type: 'pie'
             },
             title: {
-                text: 'Money flow'
+                text: 'Money flow: ' + total + " VND"
             },
             tooltip: {
-                pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+                pointFormat: '<b>{point.y:.1f} VND / {point.percentage:.1f}%</b>'
             },
             plotOptions: {
                 pie: {
