--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -276,8 +276,8 @@
 
         var total = 0;
         data.forEach(function (item) {
-            pieData.push({ name: item[1], y: item[2] })
-            total += item[2];
+            pieData.push({ name: item.name, y: item.amount })
+            total += item.amount;
         });
 
         Highcharts.chart('pieChart', {
