--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -105,7 +105,7 @@
                 <tr>
                     <td scope="row"><img src="#" alt="image" width="32" data-bind="attr: { src: category.urlImage }"></td>
                     <td data-bind="text: category.name" class="text-left">Shop</td>
-                    <td data-bind="text: $data.description" class="text-left">Weekly shopping</td>
+                    <td data-bind="text: description" class="d-none d-md-block text-left">Weekly shopping</td>
                     <td data-bind="attr: { class: category.operation == 1 ? 'ion-plus-circled' : 'ion-minus-circled' }"></td>
                     <td>
                         <span data-bind="text: category.currency.name" class="left"></span>:
