--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -157,7 +157,6 @@
             </nav>
         </div>
     </div>
-</div>
 
 
 <script type="text/javascript">
@@ -265,51 +264,70 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div id="pieChart"></div>
+            <div id="pieChartDay"></div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div id="pieChartWeek"></div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="pieChartMonth"></div>
         </div>
     </div>
 
 <script type="text/javascript">
-    // Build the chart
-    $.get("/rest/cash_flow/report/pie", function (data) {
-        var pieData = [];
 
-        var total = 0;
-        data.forEach(function (item) {
-            pieData.push({ name: item.name, y: item.amount })
-            total += item.amount;
-        });
+    var fnDiagram = function(period, element) {
+        // Build the chart
+        $.get("/rest/cash_flow/report/pie/" + period, function (data) {
+            var pieData = [];
 
-        Highcharts.chart('pieChart', {
-            chart: {
-                plotBackgroundColor: null,
-                plotBorderWidth: null,
-                plotShadow: false,
-                type: 'pie'
-            },
-            title: {
-                text: 'Money flow: ' + total + " VND"
-            },
-            tooltip: {
-                pointFormat: '<b>{point.y:.1f} VND / {point.percentage:.1f}%</b>'
-            },
-            plotOptions: {
-                pie: {
-                    allowPointSelect: true,
-                    cursor: 'pointer',
-                    dataLabels: {
-                        enabled: false
-                    },
-                    showInLegend: true
-                }
-            },
-            series: [{
-                name: 'Categories',
-                colorByPoint: true,
-                data: pieData
-            }]
+            var total = 0;
+            data.forEach(function (item) {
+                pieData.push({name: item.name, y: item.amount})
+                total += item.amount;
+            });
+
+            Highcharts.chart(element, {
+                chart: {
+                    plotBackgroundColor: null,
+                    plotBorderWidth: null,
+                    plotShadow: false,
+                    type: 'pie'
+                },
+                title: {
+                    text: 'Money flow for ' + period +  ': ' + total + " VND"
+                },
+                tooltip: {
+                    pointFormat: '<b>{point.y:.1f} VND / {point.percentage:.1f}%</b>'
+                },
+                plotOptions: {
+                    pie: {
+                        allowPointSelect: true,
+                        cursor: 'pointer',
+                        dataLabels: {
+                            enabled: false
+                        },
+                        showInLegend: true
+                    }
+                },
+                series: [{
+                    name: 'Categories',
+                    colorByPoint: true,
+                    data: pieData
+                }]
+            });
         });
-    });
+    };
+
+    fnDiagram('day', 'pieChartDay');
+    fnDiagram('week', 'pieChartWeek');
+    fnDiagram('month', 'pieChartMonth');
 </script>
+</div>
 
 </body>
