--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -263,12 +263,13 @@
     });
 
 </script>
-
+<!--
     <div class="row">
         <div class="col-md-12">
             <div id="pieChartDay"></div>
         </div>
     </div>
+ -->
 
     <div class="row">
         <div class="col-md-12">
@@ -327,7 +328,7 @@
     };
 
     function reloadDiagrams() {
-        fnDiagram('day', 'pieChartDay');
+        //fnDiagram('day', 'pieChartDay');
         fnDiagram('week', 'pieChartWeek');
         fnDiagram('month', 'pieChartMonth');
     }
