--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -17,6 +17,9 @@
     <script th:src="@{/webjars/bootstrap/4.1.0/js/bootstrap.min.js}"></script>
 </head>
 <body>
+
+<div th:include="navbar :: main-menu"></div>
+
 <div class="container">
     <div class="row">
         <div class="col-md-12">
