--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,11 +28,11 @@
                         <form th:action="@{/login}" method="post">
                             <div class="modal-body">
                                 <div class="form-group col">
-                                    <label for="username">Username:</label>
+                                    <label for="username" class="ion-ios-contact"> Username:</label>
                                     <input type="text" class="form-control" name="username" id="username"/>
                                 </div>
                                 <div class="form-group col">
-                                    <label for="password">Username:</label>
+                                    <label for="password" class="ion-ios-glasses"> Password:</label>
                                     <input type="password" class="form-control" name="password" id="password" />
                                 </div>
                             </div>
