--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,12 +28,10 @@
                         <form th:action="@{/login}" method="post">
                             <div class="modal-body">
                                 <div class="form-group col">
-                                    <label for="username" class="ion-ios-contact"> Username:</label>
-                                    <input type="text" class="form-control" name="username" id="username"/>
+                                    <input type="text" class="form-control" name="username" id="username" placeholder="Username"/>
                                 </div>
                                 <div class="form-group col">
-                                    <label for="password" class="ion-ios-glasses"> Password:</label>
-                                    <input type="password" class="form-control" name="password" id="password" />
+                                    <input type="password" class="form-control" name="password" id="password" placeholder="Password"/>
                                 </div>
                             </div>
                             <div class="modal-footer">
